--- a/bin/nanocl/installer.yml
+++ b/bin/nanocl/installer.yml
@@ -9,112 +9,115 @@ ApiVersion: v0.5
 Namespace: system
 
 Cargoes:
-- Name: nstore
-  Container:
-    Image: cockroachdb/cockroach:v22.2.7
-    Tty: true
-    Env:
-    - TZ=Europe/Paris
-    Cmd:
-    - start-single-node
-    - --insecure
-    - --listen-addr=:26257
-    - --advertise-addr=${{ advertise_addr }}:26257
-    HostConfig:
-      NetworkMode: system
-      Binds:
-      - ${{ state_dir }}/store/certs:/certs
-      - ${{ state_dir }}/store/data:/cockroach/cockroach-data
+  - Name: nstore
+    Container:
+      Image: cockroachdb/cockroach:v22.2.7
+      Tty: true
+      Env:
+        - TZ=Europe/Paris
+      Cmd:
+        - start-single-node
+        - --insecure
+        - --listen-addr=:26257
+        - --advertise-addr=${{ advertise_addr }}:26257
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - ${{ state_dir }}/store/certs:/certs
+          - ${{ state_dir }}/store/data:/cockroach/cockroach-data
 
-- Name: nmetrics
-  Container:
-    Image: ghcr.io/nxthat/metrsd:0.2.0
-    Tty: true
-    Env:
-    - TZ=Europe/Paris
-    Cmd:
-    - --hosts
-    - unix:///run/nanocl/metrics.sock
-    HostConfig:
-      NetworkMode: system
-      Binds:
-      - /run/nanocl:/run/nanocl
+  - Name: nmetrics
+    Container:
+      Image: ghcr.io/nxthat/metrsd:0.2.0
+      Tty: true
+      Env:
+        - TZ=Europe/Paris
+      Cmd:
+        - --hosts
+        - unix:///run/nanocl/metrics.sock
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - /run/nanocl:/run/nanocl
 
-- Name: nproxy
-  Container:
-    Image: ghcr.io/nxthat/nproxy:1.23.4.0
-    Tty: true
-    Env:
-    - TZ=Europe/Paris
-    HostConfig:
-      NetworkMode: host
-      Binds:
-      - /run:/run
-      - ${{state_dir}}/proxy/logs:/var/log/nginx/access
-      - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
-      - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
-      - ${{ state_dir }}/proxy/html:/usr/share/nginx/html
-      - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
-      - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
+  - Name: nproxy
+    Container:
+      Image: ghcr.io/nxthat/nproxy:nightly-1.24.0.0
+      Tty: true
+      Env:
+        - TZ=Europe/Paris
+      HostConfig:
+        NetworkMode: host
+        Binds:
+          - /run:/run
+          - ${{state_dir}}/proxy/logs:/var/log/nginx/access
+          - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
+          - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
+          - ${{ state_dir }}/proxy/html:/usr/share/nginx/html
+          - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
+          - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
-- Name: ncdproxy
-  Container:
-    Image: ghcr.io/nxthat/ncdproxy:0.3.1
-    Tty: true
-    Env:
-    - TZ=Europe/Paris
-    HostConfig:
-      NetworkMode: system
-      Binds:
-      - /run/nanocl:/run/nanocl
-      - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
-      - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
-      - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
-      - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
+  - Name: ncdproxy
+    Container:
+      Image: ghcr.io/nxthat/ncdproxy:nightly-0.4.0
+      Tty: true
+      Env:
+        - TZ=Europe/Paris
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - /run/nanocl:/run/nanocl
+          - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
+          - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
+          - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
+          - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
-- Name: ndaemon
-  Container:
-    Image: ghcr.io/nxthat/nanocld:0.5.0
-    Tty: true
-    Arg:
-    - --state-dir
-    - ${{ state_dir }}
-    - --conf-dir
-    - ${{ conf_dir }}
-    - --docker-host
-    - ${{ docker_host }}
-    - --gateway
-    - ${{ gateway }}
-    - --hostname
-    - ${{ hostname }}
-    - --advertise-addr
-    - ${{ advertise_addr }}
-    Env:
-    - TZ=Europe/Paris
-    - NANOCL_GID=${{ gid }}
-    HostConfig:
-      NetworkMode: system
-      Binds:
-      - /run/nanocl:/run/nanocl
-      - /run/docker.sock:/run/docker.sock
-      - ${{ state_dir }}:${{ state_dir }}
-      - ${{ conf_dir }}:${{ conf_dir }}
+  - Name: ndns
+    Container:
+      Env:
+        - TZ=Europe/Paris
+      Image: ghcr.io/nxthat/ndns:nightly-2.87.0
+      HostConfig:
+        NetworkMode: host
+        Binds:
+          - ${{ state_dir }}/dns:/etc
 
-# - Name: ndns
-#   Container:
-#     Env:
-#     - TZ=Europe/Paris
-#     Image: nanocl-dnsmasq:0.0.1
-#     HostConfig:
-#       NetworkMode: host
+  - Name: ncddns
+    Container:
+      Env:
+        - TZ=Europe/Paris
+      Image: ghcr.io/nxthat/ncddns:nightly-0.1.0
+      Tty: true
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - /run/nanocl:/run/nanocl
+          - ${{ state_dir }}/dns:/etc
 
-# - Name: ncddns
-#   Container:
-#     Env:
-#     - TZ=Europe/Paris
-#     Image: nanocl-ncddns:0.0.1
-#     Tty: true
-#     HostConfig:
-#       NetworkMode: system
-#       Binds:
-#       - /run/nanocl:/run/nanocl
+  - Name: ndaemon
+    Container:
+      Image: ghcr.io/nxthat/nanocld:nightly-0.6.0
+      Tty: true
+      Arg:
+        - --state-dir
+        - ${{ state_dir }}
+        - --conf-dir
+        - ${{ conf_dir }}
+        - --docker-host
+        - ${{ docker_host }}
+        - --gateway
+        - ${{ gateway }}
+        - --hostname
+        - ${{ hostname }}
+        - --advertise-addr
+        - ${{ advertise_addr }}
+      Env:
+        - TZ=Europe/Paris
+        - NANOCL_GID=${{ gid }}
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - /run/nanocl:/run/nanocl
+          - /run/docker.sock:/run/docker.sock
+          - ${{ state_dir }}:${{ state_dir }}
+          - ${{ conf_dir }}:${{ conf_dir }}
