bugfix(ndns): config reload

--- a/bin/ncddns/tests/resource_dns.yml
+++ b/bin/ncddns/tests/resource_dns.yml
@@ -2,11 +2,11 @@ Type: Resource
 ApiVersion: v0.4
 
 Resources:
-- Name: dns-get-started
-  Kind: DnsRule
-  Version: v0.1
-  Config:
-    Network: Public
-    Entries:
-    - Name: test.com
-      IpAddress: 127.0.0.1
+  - Name: dns-get-started
+    Kind: DnsRule
+    Version: v0.1
+    Config:
+      Network: system.nsp
+      Entries:
+        - Name: test2.com
+          IpAddress: 127.0.0.1
