--- a/.github/workflows/publish_live_image.yml
+++ b/.github/workflows/publish_live_image.yml
@@ -31,22 +31,22 @@ jobs:
       - name: Publish Nightly
         if: env.CHANNEL == 'nightly' && env.BINARY_NAME != 'nanocl'
         run: |
-          gh release download -R nxthat/nanocl $BINARY_NAME-nightly-$VERSION -p $BINARY_NAME-nightly-$VERSION.tar.gz
-          cat $BINARY_NAME-nightly-$VERSION.tar.gz | docker load
-          docker tag $BINARY_NAME:nightly-$VERSION ghcr.io/nxthat/$BINARY_NAME:nightly
-          docker tag $BINARY_NAME:nightly-$VERSION ghcr.io/nxthat/$BINARY_NAME:nightly-$VERSION
+          gh release download -R nxthat/nanocl $BINARY_NAME-$VERSION-nightly -p $BINARY_NAME-$VERSION-nightly.tar.gz
+          cat $BINARY_NAME-$VERSION-nightly.tar.gz | docker load
+          docker tag ghcr.io/nxthat/$BINARY_NAME:$VERSION-nightly ghcr.io/nxthat/$BINARY_NAME:nightly
+          docker tag ghcr.io/nxthat/$BINARY_NAME:$VERSION-nightly ghcr.io/nxthat/$BINARY_NAME:$VERSION-nightly
           docker push ghcr.io/nxthat/$BINARY_NAME:nightly
-          docker push ghcr.io/nxthat/$BINARY_NAME:nightly-$VERSION
+          docker push ghcr.io/nxthat/$BINARY_NAME:$VERSION-nightly
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
 
       - name: Publish Stable
         if: env.CHANNEL == 'stable' && env.BINARY_NAME != 'nanocl'
         run: |
-          gh release download -R nxthat/nanocl $BINARY_NAME-stable-$VERSION -p $BINARY_NAME-stable-$VERSION.tar.gz
-          cat $BINARY_NAME-stable-$VERSION.tar.gz | docker load
-          docker tag $BINARY_NAME:stable-$VERSION ghcr.io/nxthat/$BINARY_NAME:latest
-          docker tag $BINARY_NAME:stable-$VERSION ghcr.io/nxthat/$BINARY_NAME:$VERSION
+          gh release download -R nxthat/nanocl $BINARY_NAME-$VERSION -p $BINARY_NAME-$VERSION.tar.gz
+          cat $BINARY_NAME-$VERSION.tar.gz | docker load
+          docker tag ghcr.io/nxthat/$BINARY_NAME:stable-$VERSION ghcr.io/nxthat/$BINARY_NAME:latest
+          docker tag ghcr.io/nxthat/$BINARY_NAME:stable-$VERSION ghcr.io/nxthat/$BINARY_NAME:$VERSION
           docker push ghcr.io/nxthat/$BINARY_NAME:latest
           docker push ghcr.io/nxthat/$BINARY_NAME:$VERSION
         env:
