--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -37,6 +37,8 @@ services:
     network_mode: host
     environment:
       - TZ=Europe/Paris
+    volumes:
+      - /var/lib/nanocl/dns:/opt/dns
     labels:
       - io.nanocl=enabled
       - io.nanocl.c=ndns.system
