--- a/.github/workflows/publish_live_image.yml
+++ b/.github/workflows/publish_live_image.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Get info
         run: |
           echo "BINARY_NAME=$(echo ${{ github.event.release.name }} | awk -F- '{print $1}')" >> $GITHUB_ENV
-          echo "CHANNEL=$(echo ${{ github.event.release.name }} | awk -F- '{print $2}')" >> $GITHUB_ENV
-          echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
+          echo "CHANNEL=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
+          echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $2}')" >> $GITHUB_ENV
       - name: Print info
         run: |
           echo $BINARY_NAME
@@ -41,7 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
 
       - name: Publish Stable
-        if: env.CHANNEL == 'stable' && env.BINARY_NAME != 'nanocl'
+        if: env.CHANNEL != 'nightly' && env.BINARY_NAME != 'nanocl'
         run: |
           gh release download -R nxthat/nanocl $BINARY_NAME-$VERSION -p $BINARY_NAME-$VERSION.tar.gz
           cat $BINARY_NAME-$VERSION.tar.gz | docker load
