--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,11 @@ networks:
 services:
   nstore:
     container_name: nstore.system.c
+    hostname: nstore.nanocl.internal
     image: cockroachdb/cockroach:v22.2.7
     tty: true
+    ports:
+      - 26257:26257
     networks:
       - system
     volumes:
@@ -140,7 +143,11 @@ services:
     container_name: ndaemon.system.c
     image: ghcr.io/nxthat/nanocl-dev:dev
     tty: true
-    network_mode: host
+    hostname: ndaemon.nanocl.internal
+    networks:
+      - system
+    ports:
+      - 8585:8585
     environment:
       - TZ=Europe/Paris
     labels:
@@ -159,4 +166,4 @@ services:
       - -w
       - /project/bin/nanocld/src
       - -x
-      - run --no-default-features --features dev --bin nanocld
+      - run --no-default-features --features dev --bin nanocld -- --gid 1001
