--- a/bin/nanocl/installer.yml
+++ b/bin/nanocl/installer.yml
@@ -1,5 +1,5 @@
 Type: Deployment
-ApiVersion: v0.5
+ApiVersion: v0.6
 
 # This is the required component for nanocl ecosystem.
 # It is a deployment that will be parsed and used to spin up nanocl
@@ -9,23 +9,6 @@ ApiVersion: v0.5
 Namespace: system
 
 Cargoes:
-  - Name: nstore
-    Container:
-      Image: cockroachdb/cockroach:v22.2.7
-      Tty: true
-      Env:
-        - TZ=Europe/Paris
-      Cmd:
-        - start-single-node
-        - --insecure
-        - --listen-addr=:26257
-        - --advertise-addr=${{ advertise_addr }}:26257
-      HostConfig:
-        NetworkMode: system
-        Binds:
-          - ${{ state_dir }}/store/certs:/certs
-          - ${{ state_dir }}/store/data:/cockroach/cockroach-data
-
   - Name: nmetrics
     Container:
       Image: ghcr.io/nxthat/metrsd:0.2.0
@@ -42,7 +25,7 @@ Cargoes:
 
   - Name: nproxy
     Container:
-      Image: ghcr.io/nxthat/nproxy:nightly-1.24.0.0
+      Image: ghcr.io/nxthat/nproxy:1.24.0.0-nightly
       Tty: true
       Env:
         - TZ=Europe/Paris
@@ -50,7 +33,7 @@ Cargoes:
         NetworkMode: host
         Binds:
           - /run:/run
-          - ${{state_dir}}/proxy/logs:/var/log/nginx/access
+          - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
           - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
           - ${{ state_dir }}/proxy/html:/usr/share/nginx/html
@@ -59,7 +42,7 @@ Cargoes:
 
   - Name: ncdproxy
     Container:
-      Image: ghcr.io/nxthat/ncdproxy:nightly-0.4.0
+      Image: ghcr.io/nxthat/ncdproxy:0.4.0-nightly
       Tty: true
       Env:
         - TZ=Europe/Paris
@@ -76,28 +59,47 @@ Cargoes:
     Container:
       Env:
         - TZ=Europe/Paris
-      Image: ghcr.io/nxthat/ndns:nightly-2.87.0
+      Image: ghcr.io/nxthat/ndns:2.87.1-nightly
       HostConfig:
         NetworkMode: host
         Binds:
-          - ${{ state_dir }}/dns:/etc
+          - ${{ state_dir }}/dns:/opt/dns
 
   - Name: ncddns
     Container:
       Env:
         - TZ=Europe/Paris
-      Image: ghcr.io/nxthat/ncddns:nightly-0.1.0
+      Image: ghcr.io/nxthat/ncddns:0.1.1-nightly
       Tty: true
       HostConfig:
         NetworkMode: system
         Binds:
           - /run/nanocl:/run/nanocl
-          - ${{ state_dir }}/dns:/etc
+          - ${{ state_dir }}/dns:/opt/dns
+
+  - Name: nstore
+    Container:
+      Image: cockroachdb/cockroach:v22.2.7
+      Tty: true
+      Hostname: nstore.nanocl.internal
+      Env:
+        - TZ=Europe/Paris
+      Cmd:
+        - start-single-node
+        - --insecure
+        - --listen-addr=:26257
+        - --advertise-addr=${{ advertise_addr }}:26257
+      HostConfig:
+        NetworkMode: system
+        Binds:
+          - ${{ state_dir }}/store/certs:/certs
+          - ${{ state_dir }}/store/data:/cockroach/cockroach-data
 
   - Name: ndaemon
     Container:
-      Image: ghcr.io/nxthat/nanocld:nightly-0.6.0
+      Image: ghcr.io/nxthat/nanocld:0.6.0-nightly
       Tty: true
+      Hostname: ndaemon.nanocl.internal
       Arg:
         - --state-dir
         - ${{ state_dir }}
@@ -111,6 +113,7 @@ Cargoes:
         - ${{ hostname }}
         - --advertise-addr
         - ${{ advertise_addr }}
+        - --gid ${{ gid }}
       Env:
         - TZ=Europe/Paris
         - NANOCL_GID=${{ gid }}
