--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
-          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb
+          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb || true
           gh release upload $BINARY_NAME-$VERSION-$CHANNEL target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
