--- a/.github/workflows/draft_stable_image.yml
+++ b/.github/workflows/draft_stable_image.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
-          gh release delete-asset -y $BINARY_NAME-$VERSION $BINARY_NAME-$VERSION.tar.gz
-          gh release upload $BINARY_NAME-$VERSION /tmp/$BINARY_NAME-$VERSION.tar.gz#$BINARY_NAME-image;
+          gh release delete-asset -y $BINARY_NAME-$VERSION $BINARY_NAME-$VERSION.tar.gz || true
+          gh release upload $BINARY_NAME-$VERSION /tmp/$BINARY_NAME-$VERSION.tar.gz#$BINARY_NAME-image
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
