--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -1,4 +1,4 @@
-name: Draft nightly nanocl release
+name: Draft Nightly Nanocl
 
 on:
   push:
@@ -40,7 +40,7 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
-          sudo apt-get install -y gcc make musl musl-dev musl-tools openssl git pandoc
+          sudo apt-get install -y gcc make musl musl-dev musl-tools openssl git pandoc build-essential
           rustup target add x86_64-unknown-linux-musl
       # Package nanocl into a .deb
       - name: Package
