--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -40,6 +40,7 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
+          sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get dist-upgrade -y
           sudo apt-get install -y gcc make musl musl-dev musl-tools openssl git pandoc build-essential
           rustup target add x86_64-unknown-linux-musl
       # Package nanocl into a .deb
