--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -41,7 +41,7 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
-          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base
+          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli
           rustup target add x86_64-unknown-linux-musl
       # Package nanocl into a .deb
       - name: Package
