--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -33,6 +33,9 @@ jobs:
           echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
       # Print info for debug
+      - name: Fix git permission
+        run: |
+          git config --global --add safe.directory /__w/nanocl/nanocl
       - name: Print Info
         run: |
           echo $BRANCH_NAME
