--- a/bin/nanocl/installer.yml
+++ b/bin/nanocl/installer.yml
@@ -97,10 +97,10 @@ Cargoes:
 
   - Name: ndaemon
     Container:
-      Image: ghcr.io/nxthat/nanocld:0.6.0-nightly
+      Image: ghcr.io/nxthat/nanocld:0.6.1-nightly
       Tty: true
       Hostname: ndaemon.nanocl.internal
-      Arg:
+      Cmd:
         - --state-dir
         - ${{ state_dir }}
         - --conf-dir
@@ -113,7 +113,8 @@ Cargoes:
         - ${{ hostname }}
         - --advertise-addr
         - ${{ advertise_addr }}
-        - --gid ${{ gid }}
+        - --gid
+        - "${{ gid }}"
       Env:
         - TZ=Europe/Paris
         - NANOCL_GID=${{ gid }}
