--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -1,14 +1,12 @@
-name: Draft Nanocl Binary
+name: Draft Nightly Nanocl
 
 on:
   push:
     branches:
       - "release-nightly-nanocl-*"
-      - "release-stable-nanocl-*"
   pull_request:
     branches:
       - "release-nightly-nanocl-*"
-      - "release-stable-nanocl-*"
     types: [opened, synchronize, closed]
 
 env:
@@ -17,14 +15,15 @@ env:
 jobs:
   release_image:
     runs-on: ubuntu-latest
+    container: rust:1.69.0-alpine3.17
 
     steps:
+      # Install required dependencies
+      - name: Install dependencies
+        run: |
+          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli
+          rustup target add x86_64-unknown-linux-musl
       - uses: actions/checkout@v3
-      # Install rust
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
       # Extract branch info
       - name: Set info
         run: |
@@ -34,34 +33,33 @@ jobs:
           echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
       # Print info for debug
+      - name: Fix git permission
+        run: |
+          git config --global --add safe.directory /__w/nanocl/nanocl
       - name: Print Info
         run: |
           echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
           echo $VERSION
-      # Install dependencies
-      - name: Install dependencies
-        run: apt update && apt install pandoc dpkg
-      # Create binary
-      - name: Create Binary
+      # Package nanocl into a .deb
+      - name: Package
         run: ./scripts/release_nanocl.sh
-      # Upload it to release
       - name: Test if release already exists
         id: release-exists
         continue-on-error: true
-        run: gh release view $BINARY_NAME-$CHANNEL-$VERSION
+        run: gh release view $BINARY_NAME-$VERSION-$CHANNEL
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Create new draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-        run: gh release create -t $BINARY_NAME-$CHANNEL-$VERSION -d $BINARY_NAME-$CHANNEL-$VERSION -F ./bin/$BINARY_NAME/changelog.md ./target/debian/nanocl_$VERSION_amd64.deb#$BINARY_NAME.deb ./target/x86_64-unknown-linux-musl/release/$BINARY_NAME#BINARY_NAME;
+        run: gh release create -d $BINARY_NAME-$VERSION-$CHANNEL -t $BINARY_NAME-$VERSION-$CHANNEL -F ./bin/$BINARY_NAME/changelog.md target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
-          gh release delete-asset -y $BINARY_NAME-$CHANNEL-$VERSION $BINARY_NAME-$CHANNEL-$VERSION.tar.gz
-          gh release upload $BINARY_NAME-$CHANNEL-$VERSION /tmp/$BINARY_NAME-$CHANNEL-$VERSION.tar.gz#$BINARY_NAME-image;
+          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb || true
+          gh release upload $BINARY_NAME-$VERSION-$CHANNEL target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
