bugfix: ncddns default config to ignore resolv.conf and hosts

--- a/bin/ndns/dnsmasq.conf
+++ b/bin/ndns/dnsmasq.conf
@@ -1,8 +1,7 @@
 bind-interfaces
-conf-dir=/etc/dnsmasq.d,*.conf
-domain-needed
-bogus-priv
-filterwin2k
-localise-queries
-expand-hosts
-no-negcache
+no-resolv
+no-poll
+no-hosts
+proxy-dnssec
+except-interface=lo
+conf-dir=/opt/dns/dnsmasq.d,*.conf
