--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -60,5 +60,6 @@ nanocl_utils = { version = "0.1.1", features = [
   "io_error",
   "http_client_error",
   "bollard",
+  "serde_json",
   "serde_yaml",
 ] }
