feature(ncdproxy): Http Version and Headers

--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -26,12 +26,16 @@ Resources:
                 CargoPort: 9000
 
             - Path: /v2
+              Version: 1.1 # The http version to use for the request
+              Headers: # Add headers to the request to enable websocket
+                - Upgrade $http_upgrade # Upgrade the connection to websocket
+                - Connection "Upgrade" # Upgrade the connection to websocket
               Target:
                 CargoKey: deploy-example2.global
                 CargoPort: 9000
 
 # See all options:
-# https://docs.next-hat.com/references/nanocl/daemon/v0.4#tag/Cargoes/operation/create_cargo
+# https://docs.next-hat.com/references/nanocl/daemon/v0.6#tag/Cargoes/operation/create_cargo
 Cargoes:
   - Name: deploy-example
     Container:
