--- a/installer.nightly.yml
+++ b/installer.nightly.yml
@@ -33,6 +33,7 @@ Cargoes:
         NetworkMode: host
         Binds:
           - /run:/run
+          - ${{ state_dir }}/proxy/certs:/etc/nginx/certs
           - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
           - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
