--- a/examples/custom_resource.yml
+++ b/examples/custom_resource.yml
@@ -3,15 +3,17 @@ ApiVersion: v0.6
 
 Resources:
   - Name: VpnUser
-    Kind: Custom
+    Kind: Kind
     Version: v0.1
     Config:
-      title: VpnUser
-      description: Create a new vpn user
-      type: object
-      required:
-        - Username
-      properties:
-        Username:
-          description: Cargo to watch for changes
-          type: string
+      Url: vpn.nanocl.internal
+      Schema:
+        title: VpnUser
+        description: Create a new vpn user
+        type: object
+        required:
+          - Username
+        properties:
+          Username:
+            description: Cargo to watch for changes
+            type: string
