--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -3,6 +3,8 @@ ApiVersion: v0.7
 
 Namespace: global
 
+# See all options:
+# https://docs.next-hat.com/references/nanocl/resource
 Resources:
   - Name: deploy-example.com
     Kind: ProxyRule
@@ -35,7 +37,7 @@ Resources:
                 CargoPort: 9000
 
 # See all options:
-# https://docs.next-hat.com/references/nanocl/daemon/v0.6#tag/Cargoes/operation/create_cargo
+# https://docs.next-hat.com/references/nanocl/cargo
 Cargoes:
   - Name: deploy-example
     Container:
