--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Cache register
         uses: actions/cache@v3
         with:
-          path: ./.buildx-cache
+          path: .buildx-cache
           key: buildx-cache
       # Install rust
       - uses: actions-rs/toolchain@v1
@@ -49,8 +49,8 @@ jobs:
           docker pull cockroachdb/cockroach:v22.2.7
           docker pull ghcr.io/nxthat/metrsd:0.2.0
           docker pull nexthat/nanocl-get-started:latest
-          docker buildx build --load --cache-from type=local,src=./.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ndns/Dockerfile .
-          docker buildx build --load --cache-from type=local,src=./.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
+          docker buildx build --load --cache-from type=local,src=.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ndns/Dockerfile .
+          docker buildx build --load --cache-from type=local,src=.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
           cargo build --no-default-features --features test --bin nanocl
           cargo build --no-default-features --features test --bin ncdproxy
           cargo build --no-default-features --features test --bin nanocld
