--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -24,6 +24,7 @@ serde_yaml = ["dep:serde_yaml"]
 serde_urlencoded = ["dep:serde_urlencoded"]
 http_error = ["ntex", "dep:serde_json"]
 http_client_error = ["ntex", "io_error", "http_error", "serde_urlencoded"]
+unix = ["dep:libc"]
 
 [dependencies]
 ntex = { version = "0.6.7", optional = true }
@@ -37,3 +38,4 @@ futures = { version = "0.3.25", optional = true }
 utoipa = { version = "3.2", features = ["yaml"], optional = true }
 utoipa-swagger-ui = { version = "3.1", optional = true }
 serde_urlencoded = { version = "0.7.1", optional = true }
+libc = { version = "0.2.139", optional = true }
